<resources>
    <string name="app_name">maréu</string>
    <string name="dialog_title">Attention</string>
    <string name="dialog_message">Voulez-vous le supprimer ?</string>
    <string name="ok">Oui</string>
    <string name="cancel">Non</string>
    <string name="pick_salle">Choisir la salle</string>
    <string name="email">Email</string>
    <string name="invalid_email">Email invalide</string>
    <string name="pick_date">Choisir une heure</string>
    <string name="pick_sujet">Choisir un sujet</string>
    <string name="create_meeting">Créer la réunion</string>
    <string name="filtre_hours">Filtre par heure</string>
    <string name="filtre_room">Filtre par salle</string>
    <string name="filtre_reset">Effacer le filtre</string>
    <string name="check_reu_dispo">Changer d\'heure ou de salle !</string>
    <string name="pick_duration_meeting">Choisir le temps de la réunion</string>
    <string name="minute">%d minutes</string>
    <string name="h">h</string>
    <string name="subject">sujet</string>
    <string name="hour">heure</string>
    <string name="duration">durée</string>
    <string name="room">salle</string>
    <string name="image_delete">image delete</string>
    <string name="image_circle">image circle</string>

    <string-array name="room_item">
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 4</item>
        <item>Salle 5</item>
        <item>Salle 6</item>
        <item>Salle 7</item>
        <item>Salle 8</item>
        <item>Salle 9</item>
        <item>Salle 10</item>
    </string-array>

    <string-array name="duration_meeting">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
</resources>