...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="email"
        app:layout_constraintTop_toBottomOf="@id/sujet"
        app:layout_constraintStart_toEndOf="@id/imgCircle"
        app:layout_constraintEnd_toStartOf="@id/delete_reunion" />

    <ImageButton
        android:id="@+id/delete_reunion"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
...
